# event-store

./: .gitignore  Cargo.toml  shell.nix
event-derive/: Cargo.toml
event-derive/src/: lib.rs
event-store/: Cargo.toml
event-store/src/: lib.rs
event-type/: Cargo.toml
event-type/src/: event.rs  info.rs  lib.rs  state.rs
src/: bus.rs  command.rs  driver.rs  event.rs  info.rs  lib.rs  state.rs  store.rs
tests/: redis.rs  state.rs  store.rs
