[package]
name = "event-store"
version = "0.1.0"
authors = ["binh <dau.thanh.binh@gmail.com>"]
edition = "2021"

[workspace]
members = ["event-derive"]

[profile.dev]
opt-level = 1
codegen-units = 5

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4", "wasm-bindgen"], default-features = false }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
event-derive = { path = "./event-derive" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
