[package]
name = "event-store"
version = "0.1.0"
authors = ["binh <dau.thanh.binh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
event-derive = { path = "../event-derive" }
event-type = { path = "../event-type" }
