[package]
name = "event-type"
version = "0.1.0"
authors = ["binh <dau.thanh.binh@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4", "wasm-bindgen"], default-features = false }
